# qmi_hacking

./: README.md  generated_code_backup.c  meson.build  qmi_qrild_svc.c  qmi_qrild_svc.h  qmi_test.c
